# embedlog

./: AUTHORS  CMakeLists.txt
include/: config.h  embedlog.h
src/: el-file.c  el-file.c.orig  el-options.c  el-syslog.c  el-ts.c  el-tty.c
